Fixing bootsrap problem

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,7 +9,7 @@
 body {
 	min-height: 100vh;
 	overflow-x: hidden;
-	background: linear-gradient(#1E265B, #7597de);
+	background: linear-gradient(#1D2E62, #7597de);
 }
 
 
