--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,8 @@
 		<!-- Our custom CSS -->
 		<link rel="stylesheet" href="{{ asset('css/home.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap" rel="stylesheet">
 
 		<title>
 			{% block title %}Camille Rouaux Point Com !{% endblock %}
