--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,12 +9,17 @@
 body {
 	min-height: 100vh;
 	overflow-x: hidden;
-	background: linear-gradient(#1D2E62, #7597de);
+	background-color: #1E265B;
 	font-family: 'Nunito Sans', sans-serif;
 	font-size: calc(0.5rem + 1vw);
 }
 
+body.overflow {
+  overflow: hidden;
+}
+
 section{
+	background: linear-gradient(#1D2E62, #171625);
 	position: relative;
 	width: 100%;
 	height: 100vh;
@@ -30,9 +35,9 @@ section::before{
 	position: absolute;
 	bottom: 8px;
 	width: 100%;
-	height: 218px;
-	background: linear-gradient(to top, #1E265B, transparent);
-	z-index: 1000;
+	height: 80px;
+	background: linear-gradient(to top, #171625, transparent);
+	z-index: 1010;
 }
 
 section img {
@@ -50,18 +55,18 @@ section img#moon{
 }
 
 section img#mountains_front{
-	z-index: 10;
+	z-index: 1009;
 }
 
 #button {
 	text-decoration: none;
-	padding: 8px 30px;
 	border-radius: 40px;
 	background: #fff;
 	color: #2b1055;
-	font-size: 1.5em;
-	z-index: 9;
+	font-size: 1.1em;
+	z-index: 1008;
 	transform: translateY(100px);
+	padding: 8px 15px;
 }
 
 #button:hover {
@@ -71,33 +76,15 @@ section img#mountains_front{
 @media screen and (max-width: 330px) {
   #button {
     text-decoration: none;
-    padding: 8px 30px;
     border-radius: 40px;
     background: #ffffff;
     color: #2b1055;
     font-size: 1.5em;
     z-index: 9;
     transform: translateY(100px);
-
+		padding: 8px 15px;
   }
 }
-.sec{
-	position: relative;
-	padding: 30px;
-	background: #1E265B;
-	margin-top: -10px;
-	z-index: 1010;
-}
 
-.sec h2{
-	font-size: 3.5em;
-	margin-bottom: 10px;
-	color: #fff;
-	align-self: center;
-}
 
-.sec p{
-	font-size: 1em;
-	color: #fff;
-}
 
