--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -6,18 +6,6 @@
   
 }
 
-body {
-  width: 100%;
-  height: 100%;
-  background: url(../image/zelda.png) no-repeat center ;
-  font-family: 'Nunito Sans', sans-serif;
-  background: linear-gradient(#1D2E62, #7597de);
-}
-
-body.overflow {
-  overflow: hidden;
-}
-
 @media screen and (min-width: 960px) {
   .navbar .nav-links{
     width: fit-content;
@@ -54,16 +42,17 @@ body.overflow {
     position: absolute;
     top: 42px;
     left: 50px;
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: bold;
     color:#ffffff;
     text-decoration: none;
+    z-index: 1015;
   }
   
   .navbar .nav-links ul{
     list-style: none;
     display: flex;
-    font-size: 1.2em;
+    font-size: 1em;
   }
   
   .navbar .nav-links ul li{
@@ -155,6 +144,7 @@ body.overflow {
     font-weight: bold;
     color:#ffffff;
     text-decoration: none;
+    z-index: 1008;
   }
 
   /*  NAV
@@ -165,7 +155,7 @@ body.overflow {
     z-index: 1009;
     top: -47px;
     right: 0;
-    height: 509px;
+    height: 350px;
     max-width: 515px;
     width: 288px;
     padding: 100px 40px 60px 40px;
