--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,17 +61,17 @@
 			</div>		
 			<div class="allButtons">
 				<div class="socialButtons">
-					<a href="#" class="git">	
+					<a href="https://github.com/CamilleRouaux" class="git">	
 						<img src="{{ asset('image/git.png')}}">
 					</a>
-					<a href="#" class="mail">
+					<a href="https://www.linkedin.com/in/camille-rouaux/" class="linkedin">
 						<img src="{{ asset('image/linkedin.png')}}">
 					</a>
-					<a href="#" class="linkedin">
+					<a href="#" class="mail">
 						<img src="{{ asset('image/mail.png')}}">
 					</a>
 				</div>
-				<button class="cv">CV</button>
+			<a href="{{ asset('doc/CV_Rouaux_Camille.pdf')}}" download="CV_Rouaux_Camille.pdf" class="cv"><img src="{{ asset('image/download.png')}}" alt=""> Mon CV</a>
 			</div>
 		</div>
 	</div>	
