--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,8 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		 <!-- favicon -->
+		 <link rel="shortcut icon" href="{{ asset('image/logo.png')}}" type="image/x-icon">
 		<!-- Our custom CSS -->
 		<link rel="stylesheet" href="{{ asset('css/home.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/nav.css') }}">
@@ -13,7 +15,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap" rel="stylesheet">
 
 		<title>
-			{% block title %}Camille Rouaux Point Com !{% endblock %}
+			{% block title %}Camille Rouaux - Portfolio{% endblock %}
 		</title>
 	</head>
 
@@ -23,7 +25,7 @@
   	<span></span>
 	</div>
 
-	<a href="#" class="logo">Logo</a>
+	<a href="#"><img  class="logo" src="{{ asset('image/logo.png')}}" alt="Logo"></a>
 	
 	<nav class="navbar">
 		<div class="nav-links">
