--- a/public/css/about.css
+++ b/public/css/about.css
@@ -145,10 +145,32 @@
 	.socialButtons img {
 		width: 20px;
 		height: 20px;
-
 	}
 
 	.socialButtons a:hover{
+		background-color: #602FDD;
+		transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+	}
+
+	.mail {
+		background-color:#171625 ;
+		border: 1px #fff solid;
+		border-radius: 50px;
+		padding: 2px;
+		width: 40px;
+		height: 40px;
+		display: flex;
+		align-items: center;
+    justify-content: center;
+		transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+	}
+
+	.mail img {
+		width: 20px;
+		height: 20px;
+	}
+
+	.mail:hover{
 		background-color: #602FDD;
 		transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
 	}
