--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,10 +63,10 @@
 			</div>		
 			<div class="allButtons">
 				<div class="socialButtons">
-					<a href="https://github.com/CamilleRouaux" class="git">	
+					<a href="https://github.com/CamilleRouaux" class="git" target="_blank">	
 						<img src="{{ asset('image/git.png')}}">
 					</a>
-					<a href="https://www.linkedin.com/in/camille-rouaux/" class="linkedin">
+					<a href="https://www.linkedin.com/in/camille-rouaux/" class="linkedin" target="_blank">
 						<img src="{{ asset('image/linkedin.png')}}">
 					</a>
 					<button class="mail" value="rouaux.camille@hotmail.fr">
