--- a/public/css/about.css
+++ b/public/css/about.css
@@ -9,33 +9,31 @@
 	position: absolute;
 }
 
-.sec  {
+.sec{
 	color: white;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	align-content: space-around;
+	align-content: flex-start;
 	position: relative;
-	padding: 60px;
+	padding: 5% 40px;
 	height: 100vh;
 	max-width: 1400px;
 	margin: -10px auto 0;
 }
 
-.prez{
+.prez {
 	display: flex;
-	height: fit-content;
+	height: 70%;
 	justify-content: space-evenly;
-	flex-direction: row;
+	flex-direction: column-reverse;
 	align-items: center;
 	z-index: 1011;
 }
 
-
 .sec h2{
-	font-size: 3em;
+	font-size: 2.5em;
 	color: #fff;
-
 }
 
 .sec p{
@@ -43,7 +41,6 @@
 	color: #fff;
 	margin-top: 3%;
 	z-index: 1011;
-
 }
 
 .titre {
@@ -55,156 +52,216 @@
 }
 
 .avatar {
-	width: 20%;
+	width: 70%;
 	object-fit: contain;
-	z-index: 1011;
+	align-self: center;
 }
 
+.allButtons {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+}
 
+.socialButtons{
+	display: flex;
+	justify-content: space-evenly;
+	margin-bottom: 8%;
+	width: 100%;
+}
 
-@media screen and (max-width: 970px) {
-	.prez {
-    display: flex;
-    height: fit-content;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
+.socialButtons a {
+	border: 1px #fff solid;
+	border-radius: 50px;
+	padding: 2px;
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.socialButtons img {
+	width: 20px;
+	height: 20px;
+}
+
+.socialButtons a:hover{
+	background-color: #602FDD;
+	transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.mail {
+	background-color:#171625 ;
+	border: 1px #fff solid;
+	border-radius: 50px;
+	padding: 2px;
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.mail img {
+	width: 20px;
+	height: 20px;
+}
+
+.mail:hover{
+	background-color: #602FDD;
+	transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cv{
+	width: 80%;
+	height: 30px;
+	border-radius: 50px;
+	border: 0px;
+	color: #fff;
+	background: linear-gradient(36deg, #602FDD, #212350);
+	transition: all 0.3s ease-in-out;
+	cursor: pointer;
+	margin-top: 10px;
+	text-transform: uppercase;
+	text-decoration: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: large;
+	font-weight: 500;
+	gap: 3%;
+}
+
+.cv:hover{
+	transform: translateY(-6px);
+	transition: all 0.3s ease-in-out;
+	box-shadow: 2px 2px 20px #35118f;
+}
+
+.cv img{
+	height: 16px;
+	width: 16px;
+}
+
+@media screen and (min-width: 545px) {
+	.sec{
+	padding: 80px;
+	}
+
+	.sec p {
+		font-size: 1em;
+		color: #fff;
+		margin-top: 3%;
+		z-index: 1011;
 	}
 
 	.avatar {
-    width: 55%;
-    object-fit: contain;
-    align-self: center;
-}
-}	
-
-@media screen and (max-width: 545px) {
-	.sec{
-	padding: 19px;
-	}
-}
-/* 
-@media screen and (max-width: 325px) { */
-	.avatar {
-    width: 70%;
-    object-fit: contain;
-    align-self: center;
+		width: 55%;
+		object-fit: contain;
+		align-self: center;
 	}
 
-	.sec{
-		color: white;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-		align-content: flex-start;
-    position: relative;
-    padding: 5% 40px;
-    height: 100vh;
-    max-width: 1400px;
-    margin: -10px auto 0;
-	}
-
-	.sec h2 {
-    font-size: 2.5em;
-	}
-
-	.prez {
-		display: flex;
-		height: 70%;
-		justify-content: space-evenly;
-		flex-direction: column-reverse;
-		align-items: center;
+	.titre {
+		margin-bottom: 5%;
 	}
 
 	.allButtons {
-		display: flex;
-		flex-direction: column;
-		width: 100%;
-		align-items: center;
+		margin-top: 1%;
 	}
 
-	.socialButtons{
-		display: flex;
-		justify-content: space-evenly;
-		margin-bottom: 8%;
-		width: 100%;
+	.cv {
+		width: 70%;
+	}
+}
+
+@media screen and (min-width: 700px) {
+	.avatar {
+    width: 45%;
+		margin-bottom: 3%;
+	}
+
+	.socialButtons {
+    margin-top: 8%;
 	}
 
 	.socialButtons a {
-		border: 1px #fff solid;
-		border-radius: 50px;
-		padding: 2px;
-		width: 40px;
-		height: 40px;
-		display: flex;
-		align-items: center;
-    justify-content: center;
-		transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+    width: 50px;
+    height: 50px;
 	}
 
 	.socialButtons img {
-		width: 20px;
-		height: 20px;
-	}
-
-	.socialButtons a:hover{
-		background-color: #602FDD;
-		transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+    width: 25px;
+    height: 25px;
 	}
 
 	.mail {
-		background-color:#171625 ;
-		border: 1px #fff solid;
-		border-radius: 50px;
-		padding: 2px;
-		width: 40px;
-		height: 40px;
-		display: flex;
-		align-items: center;
+		width: 50px;
+    height: 50px;
+	}
+
+	.mail img{
+		width: 25px;
+    height: 25px;
+	}
+}
+
+@media screen and (min-width: 850px) {
+	.prez {
+		flex-direction: row;
+	}
+
+	.avatar {
+    width: 35%;
+    margin-left: 5%;
+	}
+
+	.allButtons {
+    margin-top: -15%;
+	}
+}
+
+@media screen and (min-width: 950px) {
+	.allButtons {
+    margin-top: -10%;
+	}
+
+	.cv {
+    width: 60%;
+	}
+}
+
+@media screen and (min-width: 1100px) {
+	.sec {
+    padding: 120px;
+	}
+
+	.avatar {
+    width: 30%;
+	}
+
+	.socialButtons {
     justify-content: center;
-		transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+		margin-bottom: 5%;
 	}
 
-	.mail img {
-		width: 20px;
-		height: 20px;
+	.socialButtons a {
+    margin-left: 5%;
 	}
 
-	.mail:hover{
-		background-color: #602FDD;
-		transition: all 0.25s cubic-bezier(0, 0, 0.2, 1);
+	.mail{
+		margin-left: 5%;
 	}
 
-	.cv{
-		width: 80%;
-		height: 30px;
-		border-radius: 50px;
-		border: 0px;
-		color: #fff;
-		background: linear-gradient(36deg, #602FDD, #212350);
-		transition: all 0.3s ease-in-out;
-		cursor: pointer;
-		margin-top: 10px;
-		text-transform: uppercase;
-		text-decoration: none;
-		display: flex;
-    justify-content: center;
-    align-items: center;
-		font-size: large;
-		font-weight: 500;
-		gap: 3%;
+	.cv {
+    width: 28%;
+    height: 50px;
+    margin-left: 5%;
 	}
 
-	.cv:hover{
-		transform: translateY(-6px);
-		transition: all 0.3s ease-in-out;
-		box-shadow: 2px 2px 20px #35118f;
-	}
+}
 
-	.cv img{
-		height: 16px;
-		width: 16px;
-	}
-	
 
-/* } */
