--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="{{ asset('css/nav.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/about.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/projects.css') }}">
+		<link rel="stylesheet" href="{{ asset('css/skills.css') }}">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap" rel="stylesheet">
 
@@ -79,8 +80,15 @@
 				<a href="{{ asset('doc/CV_Rouaux_Camille.pdf')}}" download="CV_Rouaux_Camille.pdf" class="cv"><img src="{{ asset('image/download.png')}}" alt=""> Mon CV</a>
 			</div>
 		</div>
+		<div class="skills">
+			<div class="front_skills">
+			</div>
+			<div class="back_skills">
+			</div>
+			<div class="loading_skills"></div>
+		</div>
 		<div class="projects" >
-			<h2>Mes projets :</h2>
+			<h2>Projets :</h2>
 			<div class="projects_container">
 				<div class="project_card">
 					<div class="project_card_img">
