Skills list & images OK

--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,8 +1,9 @@
 .projects {
 	height: 100vh;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-around;
+	align-items: center;
 }
 
 .projects h2{
