--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -21,7 +21,7 @@
 }
 
 .all_skills h3{
-	margin-bottom: 20px;
+	margin-bottom: 20%;
 	font-size: 1.2em;
 	color: #fff;
 	height: 50px;
@@ -44,5 +44,102 @@
 	height: 18px;
 	width: 18px;
 	margin-right: 5px;
+}
+
+
+@media screen and (min-width: 320px) {
+	.skills_section {
+		margin-top: 10%;
+    height: 80vh;
+	}
+
+	.all_skills {
+		width: 80%;
+		display: flex;
+		z-index: 1015;
+		flex-wrap: wrap;
+    flex-direction: row;
+		justify-content: space-around;
+		gap: 5%;
+	}
+
+	.all_skills h3 {
+		height: 35px;
+    width: 90px;
+	}
+
+	#skills_width{
+		width: 31%;
+	}
+
+	.front_skills{
+		margin-bottom: 8%;
+	}
+}
+
+@media screen and (min-width: 360px) {
+	.skills_section {
+		margin-top: auto;
+    height: fit-content;
+	}
+
+	.skills_section h2 {
+    margin-bottom: 10%;
+	}
+
+	.all_skills {
+    width: 72%;
+	}
+
+	.all_skills li {
+    align-items: center;
+    justify-content: flex-start;
+		font-size: 1.2em;
+	}
+
+	.skill_icon img {
+    height: 25px;
+    width: 25px;
+    margin-right: 8px;
+	}
+
+	.front_skills {
+    margin-bottom: 15%;
+	}
+}
+
+@media screen and (min-width: 412px) {
+	.all_skills li {
+    font-size: 1.1em;
+	}
+
+	.all_skills h3 {
+		height: 40px;
+    width: 100px;
+	}
+}
+
+@media screen and (min-width: 500px) {
+	.all_skills h3 {
+    height: 45px;
+    width: 130px;
+	}
+}
+
+@media screen and (min-width: 700px) {
+	.all_skills h3 {
+    height: 50px;
+    width: 140px;
+	}
+}
+
+@media screen and (min-width: 850px){
+	.all_skills {
+    margin-left: 6%;
+	}
+
+	.all_skills h3 {
+    margin-bottom: 10%;
+	}
 }
 
