Corrections for Skills part

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -113,13 +113,13 @@
 					<ul class="skill_list">
 						<span>
 							<li class="skill">
-								<span class="skill_icon"><img src="{{ asset('image/php.png')}}" alt="logo Php"></span>
+								<span class="skill_icon"><img src="{{ asset('image/php.png')}}" alt="logo Php" id="php_logo"></span>
 								<span class="skill_text">PHP</span>
 							</li>
 						</span>
 						<span>
 							<li class="skill">
-								<span class="skill_icon"><img src="{{ asset('image/symfony.png')}}" alt="logo Symfony"></span>
+								<span class="skill_icon"><img src="{{ asset('image/symfony.png')}}" alt="logo Symfony" id="symfo_logo"></span>
 								<span class="skill_text">Symfony</span>
 							</li>
 						</span>
