--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -1,31 +1,37 @@
+
 .skills_section {
-		height: 30vh;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 10%;
+	height: 80vh;
 }
+
 
 .skills_section h2{
-	font-size: 2.5em;
-  color: #fff;
-	margin-bottom: 30px;
+	font-size: 2em;
+	color: #fff;
+	margin-bottom: 4%;
 	z-index: 1015;
 }
 
-.all_skills{
-	width: 70%;
+.all_skills {
+	width: 80%;
 	display: flex;
 	z-index: 1015;
-	justify-content: space-between;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: space-around;
+	gap: 5%;
 }
 
 .all_skills h3{
 	margin-bottom: 20%;
 	font-size: 1.2em;
 	color: #fff;
-	height: 50px;
-	width: 120px;
+	height: 35px;
+	width: 90px;
 	border-radius: 50px;
 	background: linear-gradient(36deg, #602FDD, #212350);
 	display: flex;
@@ -37,7 +43,7 @@
 	display: flex;
 	margin-bottom: 10px;
 	font-size: 1em;
-  color: #fff;
+	color: #fff;
 }
 
 .skill_icon img{
@@ -46,45 +52,24 @@
 	margin-right: 5px;
 }
 
-
-@media screen and (min-width: 320px) {
-	.skills_section {
-		margin-top: 10%;
-    height: 80vh;
-	}
-
-	.all_skills {
-		width: 80%;
-		display: flex;
-		z-index: 1015;
-		flex-wrap: wrap;
-    flex-direction: row;
-		justify-content: space-around;
-		gap: 5%;
-	}
-
-	.all_skills h3 {
-		height: 35px;
-    width: 90px;
-	}
-
-	#skills_width{
-		width: 31%;
-	}
-
-	.front_skills{
-		margin-bottom: 8%;
-	}
+#php_logo{
+	height: 13px;
+	width: 20px;
 }
+
+#skills_width{
+	width: 31%;
+}
+
+.front_skills{
+	margin-bottom: 8%;
+}
+
 
 @media screen and (min-width: 360px) {
 	.skills_section {
 		margin-top: auto;
     height: fit-content;
-	}
-
-	.skills_section h2 {
-    margin-bottom: 10%;
 	}
 
 	.all_skills {
@@ -131,15 +116,33 @@
     height: 50px;
     width: 140px;
 	}
+
+	#php_logo {
+    height: 17px;
+    width: 27px;
+	}
 }
 
 @media screen and (min-width: 850px){
 	.all_skills {
-    margin-left: 6%;
+		justify-content: center;
+		flex-wrap: nowrap;
 	}
 
 	.all_skills h3 {
     margin-bottom: 10%;
+		font-size: 1em;
+		height: 38px;
+    width: 115px;
+	}
+}
+
+
+@media screen and (min-width: 1500px){
+
+	.all_skills h3 {
+		height: 45px;
+    width: 160px;
 	}
 }
 
