CSS corrections size & colors on skills section

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -119,7 +119,7 @@
 						</span>
 						<span>
 							<li class="skill">
-								<span class="skill_icon"><img src="{{ asset('image/symfony.png')}}" alt="logo Symfony" id="symfo_logo"></span>
+								<span class="skill_icon"><img src="{{ asset('image/symfony.png')}}" alt="logo Symfony" id="_logo"></span>
 								<span class="skill_text">Symfony</span>
 							</li>
 						</span>
