--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -24,6 +24,9 @@
 	flex-direction: row;
 	justify-content: space-around;
 	gap: 5%;
+	background-color: #202248;
+	border-radius: 10px;
+	padding: 10px;
 }
 
 .all_skills h3{
@@ -59,6 +62,9 @@
 
 #skills_width{
 	width: 31%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .front_skills{
@@ -95,7 +101,7 @@
 
 @media screen and (min-width: 412px) {
 	.all_skills li {
-    font-size: 1.1em;
+    font-size: 1em;
 	}
 
 	.all_skills h3 {
@@ -132,8 +138,8 @@
 	.all_skills h3 {
     margin-bottom: 10%;
 		font-size: 1em;
-		height: 38px;
-    width: 115px;
+		height: 40px;
+    width: 140px;
 	}
 }
 
