--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -176,12 +176,34 @@
 			<div class="projects_container">
 				<div class="project_card">
 					<div class="project_card_img">
+						{# <img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque"> #}
 					</div>
 					<div class="project_card_body">
-						<h3 class="project_card_title"></h3>
-						<p class="project_card_description"></p>
+						<h3 class="project_card_title">Hortus Plantae Floresque</h3>
+						<p class="project_card_description">Site de partage sur le jardin et les plantes</p>
+						<div>
+							<span>Symfony</span>
+							<span>CSS3</span>
+							<span>Bootstrap</span>
+							<span>JavaScript</span>
+						</div>
 					</div>
 				</div>
+				{# <div class="project_card">
+					<div class="project_card_img">
+						<img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque">
+					</div>
+					<div class="project_card_body">
+						<h3 class="project_card_title">Hortus Plantae Floresque</h3>
+						<p class="project_card_description">Site de partage sur le jardin et les plantes</p>
+						<div>
+							<span>Symfony</span>
+							<span>CSS3</span>
+							<span>Bootstrap</span>
+							<span>JavaScript</span>
+						</div>
+					</div>
+				</div> #}
 			</div>
 		</div>
 	</div>	
