--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -7,9 +7,11 @@
 }
 
 .projects h2{
-	font-size: 2em;
-  color: #fff;
+	font-size: 2.5rem;
+	color: #fff;
+	margin-bottom: 4%;
 	z-index: 1015;
+	font-weight: 800;
 }
 
 .project_card {
@@ -19,4 +21,9 @@
 	flex-direction: column;
 	width: 100%;
 	height: 420px;
+}
+
+.project_card_img{
+	width: 150px;
+	height: 150px;
 }
