--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -1,32 +1,31 @@
-
 .skills_section {
 	display: flex;
 	justify-content: space-evenly;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 10%;
 	height: 80vh;
 }
 
-
 .skills_section h2{
-	font-size: 2em;
+	font-size: 2.5rem;
 	color: #fff;
 	margin-bottom: 4%;
 	z-index: 1015;
+	font-weight: 800;
 }
 
 .all_skills {
-	width: 80%;
+	width: 85%;
 	display: flex;
 	z-index: 1015;
 	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: space-around;
 	gap: 5%;
-	background-color: #202248;
+	row-gap: 30px;
+	background-color: #33255B;
 	border-radius: 10px;
-	padding: 10px;
+	padding: 20px;
 }
 
 .all_skills h3{
@@ -36,10 +35,11 @@
 	height: 35px;
 	width: 90px;
 	border-radius: 50px;
-	background: linear-gradient(36deg, #602FDD, #212350);
+	/* background: linear-gradient(36deg, #602FDD, #212350); */
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-decoration: underline;
 }
 
 .all_skills li{
@@ -67,19 +67,10 @@
 	align-items: center;
 }
 
-.front_skills{
-	margin-bottom: 8%;
-}
-
-
 @media screen and (min-width: 360px) {
 	.skills_section {
 		margin-top: auto;
     height: fit-content;
-	}
-
-	.all_skills {
-    width: 72%;
 	}
 
 	.all_skills li {
@@ -93,15 +84,15 @@
     width: 25px;
     margin-right: 8px;
 	}
-
-	.front_skills {
-    margin-bottom: 15%;
-	}
 }
 
 @media screen and (min-width: 412px) {
+	.all_skills{
+		padding: 50px;
+	}
+
 	.all_skills li {
-    font-size: 1em;
+    font-size: 1rem;
 	}
 
 	.all_skills h3 {
@@ -121,6 +112,7 @@
 	.all_skills h3 {
     height: 50px;
     width: 140px;
+		margin-bottom: 10%;
 	}
 
 	#php_logo {
@@ -134,21 +126,39 @@
 		justify-content: center;
 		flex-wrap: nowrap;
 	}
-
+	
 	.all_skills h3 {
     margin-bottom: 10%;
-		font-size: 1em;
+		font-size: 1.5rem;
 		height: 40px;
     width: 140px;
 	}
+
+	#skills_width{
+		background: #291F43;
+		border-radius: 10px;
+		padding: 2px;
+	}
 }
 
+@media screen and (min-width: 1100px){
+	.skills_section {
+		padding: 0 120px 0 120px;
+	}
+}
 
 @media screen and (min-width: 1500px){
+	.skills_section {
+		padding: 0 190px 0 190px;
+	}
 
 	.all_skills h3 {
 		height: 45px;
     width: 160px;
+	}
+
+	#skills_width{
+		padding: 2%;
 	}
 }
 
