Projects card in a small responsive view : OK

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -176,34 +176,34 @@
 			<div class="projects_container">
 				<div class="project_card">
 					<div class="project_card_img">
-						{# <img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque"> #}
+						<img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque">
 					</div>
 					<div class="project_card_body">
-						<h3 class="project_card_title">Hortus Plantae Floresque</h3>
-						<p class="project_card_description">Site de partage sur le jardin et les plantes</p>
-						<div>
-							<span>Symfony</span>
-							<span>CSS3</span>
-							<span>Bootstrap</span>
-							<span>JavaScript</span>
+						<h3 class="project_card_title">Mon Portfolio</h3>
+						<p class="project_card_description">Projet personnel</p>
+						<div class="project_card_tags">
+							<span class="project_card_element">Symfony</span>
+							<span class="project_card_element">CSS3</span>
+							<span class="project_card_element">Bootstrap</span>
+							<span class="project_card_element">JavaScript</span>
 						</div>
 					</div>
 				</div>
-				{# <div class="project_card">
+				<div class="project_card">
 					<div class="project_card_img">
 						<img src="{{ asset('image/hortus.png')}}" alt="Hortus Plantae Floresque">
 					</div>
 					<div class="project_card_body">
 						<h3 class="project_card_title">Hortus Plantae Floresque</h3>
-						<p class="project_card_description">Site de partage sur le jardin et les plantes</p>
-						<div>
-							<span>Symfony</span>
-							<span>CSS3</span>
-							<span>Bootstrap</span>
-							<span>JavaScript</span>
+						<p class="project_card_description">Site de partage sur le jardin et les plantes. Projet de fin d'étude réalisé en équipe</p>
+						<div class="project_card_tags">
+							<span class="project_card_element">Symfony</span>
+							<span class="project_card_element">CSS3</span>
+							<span class="project_card_element">Bootstrap</span>
+							<span class="project_card_element">JavaScript</span>
 						</div>
 					</div>
-				</div> #}
+				</div>
 			</div>
 		</div>
 	</div>	
