--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,4 +1,4 @@
-.purple {
+.main_section {
 	margin-top: -10px;
 	background-color: #171625;  
 	position: relative;
@@ -10,9 +10,10 @@
 
 .svg {
 	position: absolute;
+	border: 1px rgba(255, 255, 255, 0) solid;
 }
 
-.sec{
+.about_section{
 	color: white;
 	display: flex;
 	flex-wrap: wrap;
@@ -34,12 +35,12 @@
 	margin-bottom: 10px;
 }
 
-.sec h2{
+.about_section h2{
 	font-size: 2.5em;
 	color: #fff;
 }
 
-.sec p{
+.about_section p{
 	font-size: 1em;
 	color: #fff;
 	margin-top: 3%;
@@ -151,12 +152,20 @@
 	width: 16px;
 }
 
+.scroll_arrow{
+	position: relative;
+	width: 60px;
+	z-index: 1015;
+	bottom: 5.8rem;
+	left: 42%;
+}
+
 @media screen and (min-width: 545px) {
-	.sec{
+	.about_section{
 	padding: 80px;
 	}
 
-	.sec p {
+	.about_section p {
 		font-size: 1em;
 		color: #fff;
 		margin-top: 3%;
@@ -228,7 +237,7 @@
 }
 
 @media screen and (min-width: 1100px) {
-	.sec {
+	.about_section {
     padding: 120px;
 	}
 
