--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -15,11 +15,28 @@
     z-index: 1009;
   }
 
-  nav ul li a:hover{
-		background: #fff;
-		color: #2b1055;
-		border-radius: 20px;
+  nav ul li a {
+    position: relative;
+    display: block;
 	}
+
+  nav ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 3px;
+    bottom: -5px;
+    left: 0;
+    background-color: #ffffff;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+
+  nav ul li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
 
   .nav{
     position: absolute;
