--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,12 +1,13 @@
-.projects {
+.projects_section {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
+	gap: 30px;
 }
 
-.projects h2{
-	font-size: 2.5rem;
+.projects_section h2{
+	font-size: 2rem;
 	color: #fff;
 	margin-bottom: 4%;
 	z-index: 1015;
@@ -17,6 +18,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 30px;
 }
 
 .project_card {
@@ -63,7 +65,7 @@
 }
 
 .project_card_description{
-	height: 35%;
+	height: 45%;
 	padding-bottom: 8%;
 	color: #d0cfe2;
 	font-size: 1rem;
@@ -72,7 +74,7 @@
 }
 
 .project_card_tags{
-	height: 45%;
+	height: 35%;
 	display: flex;
 	flex-wrap: wrap;
 	gap: 0.5rem;
